Add tests in deal